# trine-

./: CMakeLists.txt  main.cpp
src/: main.cpp
src/ds/: trine.cpp  trine.h
trine-library/src/: CMakeLists.txt
trine-library/src/trine/: Trine.cpp  trine.cpp  trine.h
trine-library/test/: CMakeLists.txt
trine-library/test/ds/: TestPOC.cpp  TrineTest.cpp
